package com.exemple.sqlbuilder;

public interface SqlQuery {

    /**
     * Build the query
     * @return the SQL query
     */
    String build();

}
