package com.exemple.sqlbuilder.select;

import com.exemple.sqlbuilder.SqlQuery;

/**
 * Describes the state of a limit statement
 */
public interface LimitQuery extends SqlQuery {
}
